<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/navGroceryList"
            android:title="@string/nav_grocery_list" />
        <item
            android:id="@+id/navMyPantry"
            android:title="@string/nav_pantry" />
    </group>
</menu>