<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPantryFragment">

    <ListView
        android:id="@+id/lvMyPantry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAutoCompleteIngredients"
        app:layout_constraintVertical_bias="0.0" />

    <AutoCompleteTextView
        android:id="@+id/tvAutoCompleteIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/npQuantity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/npQuantity"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="#"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/lvMyPantry"
        app:layout_constraintEnd_toStartOf="@+id/spUnit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvAutoCompleteIngredients"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spUnit"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lvMyPantry"
        app:layout_constraintEnd_toStartOf="@+id/btAddIngredient"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/npQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btAddIngredient"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lvMyPantry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</android.support.constraint.ConstraintLayout>